--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ python-telegram-bot==12.8
 tqdm==4.66.1
 pytz==2024.1
 APScheduler==3.6.3
+dataclasses==0.8; python_version < '3.7'
+typing-extensions==4.7.1
+loguru==0.7.2
+pandas==2.0.3
+numpy==1.24.4
+matplotlib==3.7.2
